--- a/index.html
+++ b/index.html
@@ -8,14 +8,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
-    <meta name="author" content="Xiaoying Riley at 3rd Wave Media">    
+    <meta name="author" content="Studio Dubious">    
     <link rel="shortcut icon" href="favicon.ico"> 
 
     <!-- Theme CSS -->  
     <link id="theme-style" rel="stylesheet" href="assets/css/theme.css">
 
 </head> 
-
+<style>
+	body {
+		font-family: 'Poppins', sans-serif;
+	}
+</style>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
 <body>    
     <header class="header">	    
         <div class="branding">
@@ -32,15 +37,20 @@
 	    <div class="container">
 		    <div class="row">
 			    <div class="col-12 col-md-7 pt-5 mb-5 align-self-center">
+					<style>
+						.hero-section {
+							background-image: url('assets/images/Repeating_Texture.png');
+							background-repeat: repeat;
+							background-size: 20%;
+						}
+					</style>
 				    <div class="promo pe-md-3 pe-lg-5">
 					    <h1 class="headline mb-3">
-						    Presenting: You're the kind of person who - The Party Game
+							<span style="color: white;">Presenting: You're the kind of person who - The Party Game</span>
 					    </h1><!--//headline-->
 					    <div class="subheadline mb-4">
-						   A casual party card game to test the impression you give friends or acquaintances 
-						    
+							<span style="color: white;">A casual party card game to test the impression you give friends or acquaintances</span>
 					    </div><!--//subheading-->
-					    
 					    <div class="cta-holder row gx-md-3 gy-3 gy-md-0">
 						    <div class="col-12 col-md-auto">
 						        <a class="btn btn-primary w-100" href="KICKSTARTERLINK">Back us on Kickstarter!</a>
@@ -106,10 +116,7 @@
 			    </div><!--col-->
 			    <div class="col-12 col-md-5 mb-5 align-self-center">
 				    <div class="book-cover-holder">
-					    <img class="img-fluid book-cover" src="assets/images/cardcover.png" alt="book cover" >
-					    <div class="book-badge d-inline-block shadow">
-						    New<br>Release
-					    </div>
+					    <img class="img-fluid book-cover" src="assets/images/Box.png" alt="book cover" >
 				    </div><!--//book-cover-holder-->
 			    </div><!--col-->
 		    </div><!--//row-->
