--- a/index.html
+++ b/index.html
@@ -39,9 +39,11 @@
 			    <div class="col-12 col-md-7 pt-5 mb-5 align-self-center">
 					<style>
 						.hero-section {
-							background-image: url('assets/images/Repeating_Texture.png');
+							background-image: url('assets/images/seamless_characters.png');
 							background-repeat: repeat;
 							background-size: 100%;
+							background-color: rgba(49, 27, 99, 0.7);
+							background-blend-mode: multiply;
 						}
 					</style>
 				    <div class="promo pe-md-3 pe-lg-5">
